--- a/index.html
+++ b/index.html
@@ -4,22 +4,21 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 
-        <link rel="stylesheet" type="text/css" href="emailsEditor.css">
-        <script src="emailsEditor.js"></script>
+        <link rel="stylesheet" type="text/css" href="emailsEditor.css">        
     </head>
     <body>
 
         <div ng-app="editEmailsApp" ng-controller="editEmailsController">
-            <div id="top">
+            <div class="top">
                 <h1>Share <span class="naming">Board name</span> with others</h1>
-                <emails-editor add-email="addEmail" get-emails-count="getEmailsCount"/>
+                <emails-editor ng-model="addresses"></emails-editor>
             </div>
-            <div id="buttons">
+            <div class="buttons">
                 <button ng-click="addEmail()" style="width: 100px; padding-left: 3px;">Add email</button>
-                <button ng-click="getEmailsCount()" style="width: 120px; padding-left: 6px">Get emails count {{emailsString}}</button>
+                <button ng-click="getEmailsCount()" style="width: 120px; padding-left: 6px">Get emails count</button>
             </div>
             </div>
-        </div>
-        <script src="mainScript.js"></script>
+        </div>   
+        <script src="emailsEditor.js"></script>
     </body>
 </html>
