--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div ng-app="emailsEditorApp">
                 
                 <div class="top">
-                    <h1>Share <span class="naming">Board name</span> with others</h1>
+                    <h1>Share <q>Board name</q> with others</h1>
                     <emails-editor ng-model="addresses"></emails-editor>
                 </div>
                 
