--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <body>
 
         <div ng-app="myApp" ng-controller="controller">
+            <a href="/arcanoid.html">Canvas arcanoid game :)</a>
             <div ng-app="emailsEditorApp">
                 
                 <div class="top">
